// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`validate requests using zod schemas > validate body > returns 200 if body matches validation schema 1`] = `
{
  "required": true,
}
`;

exports[`validate requests using zod schemas > validate body > throws 400 if body does not match validation schema 1`] = `
{
  "message": "Error",
  "statusCode": 400,
  "statusMessage": "Bad Request",
  "url": "/api/validate/body",
}
`;

exports[`validate requests using zod schemas > validate query > returns 200 if query matches validation schema 1`] = `
{
  "user": "nitro",
}
`;

exports[`validate requests using zod schemas > validate query > throws 400 if query does not match validation schema 1`] = `
{
  "message": "Error",
  "statusCode": 400,
  "statusMessage": "Bad Request",
  "url": "/api/validate/query",
}
`;
